--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="org.github.OxygenGuide"
-          android:versionCode="2"
-          android:versionName="1.1">
-    <uses-sdk android:minSdkVersion="8"/>
+          android:versionCode="3"
+          android:versionName="1.2">
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="17"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application android:label="@string/app_name" android:icon="@drawable/logo">
         <activity android:name=".MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
