Access files in zip
This major commit keeps the files compressed in the zip archive,
accessing them on the fly. For that an independent library called
zipfileprovider was created. (It is also hosted on a different github repo).

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,5 +14,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <provider android:authorities="org.github.OxygenGuide"
+         android:name=".OxygenProvider"
+         android:exported="true"></provider>
+    
     </application>
 </manifest>
