--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="org.github.OxygenGuide"
-          android:versionCode="4"
-          android:versionName="1.3">
+          android:versionCode="6"
+          android:versionName="1.5">
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="17"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <application android:label="@string/app_name" android:icon="@drawable/logo">
+    <application android:label="@string/app_name" android:icon="@drawable/logo" android:allowBackup="true">
         <activity android:name=".MainActivity"
-                  android:label="@string/app_name">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Preferences"
+            android:label="Preferences" />
     </application>
 </manifest>
