--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,12 +6,22 @@
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="17"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <application android:label="@string/app_name" android:icon="@drawable/logo">
+    <application android:label="@string/app_name" android:icon="@drawable/logo"
+                android:debuggable="true">
         <activity android:name=".MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+            <intent-filter>
+                <data android:mimeType="*/*" />
+                <data android:scheme="*" />
+                <data android:pathPattern="*" />
+                <data android:host="*" />
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
         </activity>
         <provider android:authorities="org.github.OxygenGuide"
